# playstation-emulator

./: .gitignore  Cargo.toml  README.md  memory-map.md
src/: lib.rs  main.rs
src/bios/: mod.rs
src/cpu/: delay.rs  exception.rs  interconnect.rs  mod.rs  registers.rs
src/cpu/operations/: add.rs  addi.rs  addiu.rs  addu.rs  and.rs  andi.rs  beq.rs  bgtz.rs  bltz.rs  bne.rs  bxx.rs  div.rs  divu.rs  j.rs  jal.rs  jalr.rs  jr.rs  lb.rs  lbu.rs  lh.rs  lhu.rs  lui.rs  lw.rs  lwl.rs  lwr.rs  mfc0.rs  mfhi.rs  mflo.rs  mod.rs  mtc0.rs  mthi.rs  mtlo.rs  multu.rs  nor.rs  or.rs  ori.rs  rfe.rs  sb.rs  sh.rs  sll.rs  (+16 more)
src/debugger/: mod.rs
src/gpu/: commandbuffer.rs  displaydepth.rs  dmadirection.rs  field.rs  mod.rs  renderer.rs  resolution.rs  texturedepth.rs  vertex.rs  vmode.rs
src/gpu/opengl/: mod.rs  shader.frag.glsl  shader.vert.glsl  vertex.glsl
src/instruction/: mod.rs
src/memory/: dma.rs  mod.rs  ram.rs  timers.rs
src/memory/dma/: channel.rs  direction.rs  mod.rs  port.rs  step.rs  sync.rs
src/ram/: mod.rs
