[package]
name = 'rust_playstation_emulator'
version = '0.1.0'
authors = ['Jack <admin@deadcore.co.uk>']
edition = '2021'
resolver = "2"

[dependencies]
log = '^0.4'
env_logger = '^0.6'
wgpu = "0.12"
winit = "0.26"
arrayvec = "0.4"
shaderc = "0.7"
gdb-remote-protocol = { git = "https://github.com/luser/rust-gdb-remote-protocol", rev = "3e2f7c7204f85781f8b37d601217b05935547a7f" }
futures="0.3"

[lib]
name = 'rust_playstation_emulator'
path = 'src/lib.rs'

[[bin]]
name = 'rust_playstation_emulator'
path = 'src/bin/emulator.rs'
