[package]
name = 'rust_playstation_emulator'
version = '0.1.0'
authors = ['Jack <admin@deadcore.co.uk>']
edition = "2021"

[dependencies]
wgpu = "0.19.1"
winit = "0.29.10"
env_logger = "^0.10"
log = '^0.4'
prettytable-rs = '^0.8'
arrayvec = "0.4"
futures = "0.3.30"
bytemuck = { version = "^1.14", features = ["derive"] }

[lib]
name = 'rust_playstation_emulator'
path = 'src/lib.rs'

[[bin]]
name = 'rust_playstation_emulator'
path = 'src/bin/emulator.rs'

[[bin]]
name = 'cube_example'
path = 'src/bin/cube.rs'